# crazyflie-firmware

./: .flake8  .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  .travis.yml  CONTRIBUTING.md  Jenkinsfile  Kconfig  Makefile  Makefile.kbuild  README  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  Rakefile  auto_flash.py  balette_var1_I2V_Wan_FP8_step_distillation_video_seed6514_0.22_final_trajectories.csv  balette_var1_I2V_Wan_FP8_step_distillation_video_seed6514_0.22_simulated_trajectories.csv  balette_var1_I2V_Wan_FP8_step_distillation_video_seed6514_0.22_simulated_trajectories_final.csv  bezier.py  bq_config  build_targets.json  cffirmware_setup.py  config.txt  config_details.txt  crazyflie-firmware.doxy  flake.nix  flash_swarm.sh  flush.sh  generate_trajectory.py  kalman.py  loco_session_20260303_132644.json  log00  log03  log07  module.json  pixi.toml  plot.py  (+10 more)
app_api/: Kbuild  Kconfig  Makefile  README.md  app-config
bindings/: .gitignore  Makefile  cffirmware.i  setup.py
cache/: 015734b682.json  016200fe0e.json  016f57eef0.json
config/: FreeRTOSConfig.h  config.h  nvicconf.h  stm32f10x_conf.h  stm32f40x_i2c_cpal_conf.h  stm32fxxx.h  trace.h  vl6180x_appcfg.h  vl6180x_cfg.h
configs/: adhoc_alt_defconfig  adhoc_defconfig  adhoc_uart2_defconfig  all.config  app_api.conf  bigquad.conf  bolt_defconfig  bosch.conf  cf21bl_defconfig  cf2_bmp581_defconfig  cf2_defconfig  cf2p_defconfig  cf2t_defconfig  cfbl_defconfig  defconfig  flapper_defconfig  (+15 more)
src/deck/drivers/rust/rust_example/: Cargo.toml
src/deck/drivers/rust/rust_example/src/: lib.rs
(+2084 files in other folders)
