[project]
name = "crazyflie-firmware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
]

[tool.uv]
package = false
