[package]
name = "rust_example"
version = "0.1.0"
authors = ["Jonas Danielsson <jonas@bitcraze.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_drivers = { path = "../../../core/rust" }
cty = "0.2.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
